--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -9,46 +9,41 @@
     </h:head>
     <h:body>
         <p:panel>
+            <ul>
+                <li><a href="/GuestBookGit/faces/index.xhtml">Home</a></li>
+                <li><a href="/GuestBookGit/faces/register.xhtml">Register</a></li>
+                <li><a href="/GuestBookGit/faces/login.xhtml">Login</a></li>
+            </ul>
             <h:form>
-            <h:dataTable value="#{postBean.posts}" var="posts">
-                <h:column>
-                    <f:facet name="header">Titel</f:facet>
-                    #{posts.titel}
-                </h:column>
-                <h:column>
-                    <f:facet name="header">Meddelande</f:facet>
-                    #{posts.meddelande}
-                </h:column>
-                <h:column>
-                    <f:facet name="header">Datum</f:facet>
-                    #{posts.datum}
-                </h:column>
-            </h:dataTable>
-        </h:form>
-        <h2>Lägg upp ett inlägg</h2>
-        <h:form>
-            <h:panelGrid columns="2">
-                <h:outputLabel value="Titel" for="titel" />
+                <h:dataTable value="#{postBean.posts}" var="posts">
+                    <h:column>
+                        <f:facet name="header">Titel</f:facet>
+                            #{posts.titel}
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">Meddelande</f:facet>
+                            #{posts.meddelande}
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">Datum</f:facet>
+                            #{posts.datum}
+                    </h:column>
+                </h:dataTable>
+            </h:form>
+            <h2>Lägg upp ett inlägg</h2>
+            <h:form>
+                <h:panelGrid columns="2">
+                    <h:outputLabel value="Titel" for="titel" />
                     <h:inputText value="#{postBean.titel}" id="titel" />
-                <h:outputLabel value="Meddelande" for="meddelande" />
+                    <h:outputLabel value="Meddelande" for="meddelande" />
                     <h:inputText value="#{postBean.meddelande}" id="meddelande" />
-                <h:outputLabel value="Namn" for="namn" />
+                    <h:outputLabel value="Namn" for="namn" />
                     <h:inputText value="#{postBean.namn}" id="namn" />
-                <h:outputLabel value="Email" for="email" />
+                    <h:outputLabel value="Email" for="email" />
                     <h:inputText value="#{postBean.email}" id="email" />
                     <h:commandButton action="#{postBean.savePost()}" value="Save post"/>
-            </h:panelGrid>
-        </h:form>
-        <h3>Registrera dig</h3>
-        <h:form>
-            <h:panelGrid columns="2">
-                <h:outputLabel value="Username" for="username" />
-                    <h:inputText value="#{userBean.username}" id="username" />
-                <h:outputLabel value="Password" for="password" />
-                    <h:inputSecret   value="#{userBean.password}" id="password" />
-                    <h:commandButton action="#{userBean.register()}" value="Register"/>
-            </h:panelGrid>
-        </h:form>
+                </h:panelGrid>
+            </h:form>
         </p:panel>
     </h:body>
 </html>
