--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -5,46 +5,92 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Gästbok</title>
+        <title>TODO supply a title</title>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <h:outputStylesheet library="css" name="bootstrap.css"></h:outputStylesheet>
+        <h:outputStylesheet library="css" name="style.css"></h:outputStylesheet>
     </h:head>
     <h:body>
-        <p:panel>
-            <ul>
-                <li><a href="/GuestBookGit/faces/index.xhtml">Home</a></li>
-                <li><a href="/GuestBookGit/faces/register.xhtml">Register</a></li>
-                <li><a href="/GuestBookGit/faces/login.xhtml">Login</a></li>
-            </ul>
-            <h:form>
-                <h:dataTable value="#{postBean.posts}" var="posts">
-                    <h:column>
-                        <f:facet name="header">Titel</f:facet>
-                            #{posts.titel}
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header">Meddelande</f:facet>
-                            #{posts.meddelande}
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header">Datum</f:facet>
-                            #{posts.datum}
-                    </h:column>
-                </h:dataTable>
-            </h:form>
-            <h2>Lägg upp ett inlägg</h2>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="Titel" for="titel" />
-                    <h:inputText value="#{postBean.titel}" id="titel" />
-                    <h:outputLabel value="Meddelande" for="meddelande" />
-                    <h:inputText value="#{postBean.meddelande}" id="meddelande" />
-                    <h:outputLabel value="Namn" for="namn" />
-                    <h:inputText value="#{postBean.namn}" id="namn" />
-                    <h:outputLabel value="Email" for="email" />
-                    <h:inputText value="#{postBean.email}" id="email" />
-                    <h:commandButton action="#{postBean.savePost()}" value="Save post"/>
-                </h:panelGrid>
-            </h:form>
-        </p:panel>
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Gästbok</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="/GuestBookGit/faces/index.xhtml">Home</a></li>
+                        <li><a href="#">Om</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Besök våran gästbok!<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li class="dropdown-header">Har du redan ett konto?</li>
+                                <li><a href="/GuestBookGit/faces/login.xhtml">Logga In</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li class="dropdown-header">Registrera nytt konto här</li>
+                                <li><a href="/GuestBookGit/faces/register.xhtml">Registrera</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Logga ut</a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div>
+        </nav>
+        <h:form> 
+            <p:dataScroller value="#{postBean.posts}" var="posts" chunkSize="10">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <h:outputText value="#{posts.titel}"/>
+                        </div><!-- /col-sm-12 -->
+                    </div><!-- /row -->
+                    <div class="row">
+                        <div class="col-sm-1">
+                            <div class="thumbnail">
+                            </div><!-- /thumbnail -->
+                        </div><!-- /col-sm-1 -->
+                        <div class="col-sm-5">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <strong>
+                                        <h:outputText value="#{posts.namn}"/></strong> <span class="text-muted">
+                                        <h:outputText value="#{posts.datum}"/></span>
+                                </div>
+                                <div class="panel-body">
+                                    <h:outputText value="#{posts.meddelande}"/>
+                                </div><!-- /panel-body -->
+                            </div><!-- /panel panel-default -->
+                        </div><!-- /col-sm-5 -->
+                    </div><!-- /row -->
+                </div><!-- /container -->
+            </p:dataScroller>
+        </h:form>
+   
+
+        <h2>Lägg upp ett inlägg</h2>
+        <h:form class="container">
+            <h:panelGrid columns="2">
+                <h:outputLabel value="Titel" for="titel" />
+                <h:inputText value="#{postBean.titel}" id="titel" />
+                <h:outputLabel value="Meddelande" for="meddelande" />
+                <h:inputText value="#{postBean.meddelande}" id="meddelande" />
+                <h:outputLabel value="Namn" for="namn" />
+                <h:inputText value="#{postBean.namn}" id="namn" />
+                <h:outputLabel value="Email" for="email" />
+                <h:inputText value="#{postBean.email}" id="email" />
+                <h:commandButton action="#{postBean.savePost()}" value="Save post"/>
+            </h:panelGrid>
+        </h:form>
+        <h:outputScript library="js" name="jquery.js"></h:outputScript>
+        <h:outputScript library="js" name="bootstrap.js"></h:outputScript>
     </h:body>
 </html>
 
