--- a/web/register.xhtml
+++ b/web/register.xhtml
@@ -32,15 +32,12 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Besök våran gästbok!<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-header">Har du redan ett konto?</li>
-                                <li><a href="/GuestBookGit/faces/login.xhtml">Logga In</a></li>
+                                <li><a href="/GuestBookGit/login.xhtml">Logga In</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Registrera nytt konto här</li>
-                                <li><a href="/GuestBookGit/faces/register.xhtml">Registrera</a></li>
+                                <li><a href="/GuestBookGit/register.xhtml">Registrera</a></li>
                             </ul>
                         </li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Logga ut</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
