--- a/web/register.xhtml
+++ b/web/register.xhtml
@@ -42,7 +42,7 @@
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
-            <h3>Registrera dig</h3>
+            <h3 style="padding-top: 50px;">Registrera dig</h3>
             <h:form>
                 <h:panelGrid columns="2">
                     <h:outputLabel value="Username" for="username" />
